after first night of working, progress

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
     <header>
         <!--Trying to figure out to to line up the header, name on left, 3 others lined right-->
-        <h1 id="yourNameHeader">James Dobbe</h1>
-        <h3 id="aboutLink">About</h1>
-        <h3 id="portfolioLink">Portfolio</h1>
-        <h3 id="contact">Contact</h1>
+        <h1>James Dobbe</h1>
+        <h3 class="topRight"><a href="index.html">About</a></h1>
+        <h3 class="topRight"><a href="portfolio.html">Portfolio</a></h1>
+        <h3 class="topRight"><a href="contact.html">Contact</a></h1>
 
     </header>
 <!--This div is under the header, but over the descriptive paragraph and photo-->
