newer version, working on formatting issues

--- a/index.html
+++ b/index.html
@@ -4,31 +4,47 @@
     <head>
         <meta charset="utf-8">
 
-        <title>Portfolio</title>
+        <title>About Me</title>
 
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
     </head>
     
     <!--The Beginning of the body-->
-<body>
+<body background="assets/images/embossed-diamond.png">
     <header>
         <!--Trying to figure out to to line up the header, name on left, 3 others lined right-->
-        <h1>James Dobbe</h1>
-        <h3 class="topRight"><a href="index.html">About</a></h1>
-        <h3 class="topRight"><a href="portfolio.html">Portfolio</a></h1>
-        <h3 class="topRight"><a href="contact.html">Contact</a></h1>
 
+        <div class="top">
+            <strong class="name">James Dobbe</strong>
+            <a href="index.html">About</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
+        </div> 
     </header>
-<!--This div is under the header, but over the descriptive paragraph and photo-->
-    <div id="aboutMe">
-        <h2>About Me</h2>
-        <hr>
-    </div>
+<!--This div is under the header, but over the descriptive paragraph and photo, contains the entire body-->
+    <div class="mainInfoBox"> 
+        <div class="aboutMe">
+            <h2>About Me</h2>
+            <hr>
+        </div>
 <!--The photo, and the about me section-->
-    <div>
-        <img src="assets/images/portfolioAboutMe.png" alt="picture of me">
-        This is me, I will fill this in later
+   
+        <div class="bodyInfo">
+            <img src="assets/images/portfolioAboutMe.png" alt="picture of me" width="125px" ALIGN="left">
+            This is me, I will fill this in later. But for now, maybe some more words just to keep this area large.  Beep Bop Boogie jump jump clap clap wiggle wiggle ya jump up touch the sky reach up touch the sky jump up touch the sky, jumop up, arms up high JUMP JUMP JUMP! Some more filler just to flush out the size of this beast. this is pretty difficult I must say, but I think getting it right is going to make me jump for joy.
+            <p>
+                this will definatly be an interesting paragraph, full of amazing details of the way my unique brain works. Or it will say i like tuna sandwhiches. I enjoy playing musix, Piano, guitar, drunms, harmonica, dijerido, pretty much anything that can make noise, ill jam on it.
+            </p>
+            <p>
+                The Final Paragraph will tell of dinosaurs, 8 bit video games, a boy named Cruz, and a certain chocolate salty ball recipe. Snowboarding, rainbows, pizza making, and wood burning.
+            </p>
     </div>
+        </div>
+        <footer>
+            <p>
+                Copyright @ 
+            </p>
+        </footer>
 </body>
 </html>
