--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
 <body background="assets/images/embossed-diamond.png">
     <header>
         <!--Trying to figure out to to line up the header, name on left, 3 others lined right-->
+        <strong class="name">James Dobbe</strong>
 
         <div class="top">
-            <strong class="name">James Dobbe</strong>
-            <a href="index.html">About</a>
-            <a href="portfolio.html">Portfolio</a>
+            
+            <a href="index.html">About</a>|
+            <a href="portfolio.html">Portfolio</a>|
             <a href="contact.html">Contact</a>
         </div> 
     </header>
+    <hr>
 <!--This div is under the header, but over the descriptive paragraph and photo, contains the entire body-->
     <div class="mainInfoBox"> 
         <div class="aboutMe">
@@ -32,18 +34,20 @@
    
         <div class="bodyInfo">
             <img src="assets/images/portfolioAboutMe.png" alt="picture of me" width="125px" ALIGN="left">
-            This is me, I will fill this in later. But for now, maybe some more words just to keep this area large.  Beep Bop Boogie jump jump clap clap wiggle wiggle ya jump up touch the sky reach up touch the sky jump up touch the sky, jumop up, arms up high JUMP JUMP JUMP! Some more filler just to flush out the size of this beast. this is pretty difficult I must say, but I think getting it right is going to make me jump for joy.
             <p>
-                this will definatly be an interesting paragraph, full of amazing details of the way my unique brain works. Or it will say i like tuna sandwhiches. I enjoy playing musix, Piano, guitar, drunms, harmonica, dijerido, pretty much anything that can make noise, ill jam on it.
+                    My name is James Dobbe. I am a student at the University of Washington taking classes on web development. I am pursuing a new career in computer sciences, with a strong desire to succeed. I am learning more every class than I can believe, and continue to gain confidence and drive with each lesson.
             </p>
             <p>
-                The Final Paragraph will tell of dinosaurs, 8 bit video games, a boy named Cruz, and a certain chocolate salty ball recipe. Snowboarding, rainbows, pizza making, and wood burning.
+                    I am currently managing an Italian Restraunt, overseeing the front of house, and running the Catering department. I have learned many skills here, most all of them related to customer service, multi tasking, and time management. I think a lot of the skills I have mastered from my time on the management team at my restraunt will carry over into my developing career.
+            </p>
+            <p>
+                    My family is most importnant to me. I have a beautiful wife, a 15 month old son, and a 12 year old daughter. We have a tuft tabby cat named Apollo, and an Australian Shepard/Border Collie mix. Her name is Lucy. I also enjoy playing piano and guitar, snowboarding, playing retro video games, and making pizzas.
             </p>
     </div>
         </div>
         <footer>
             <p>
-                Copyright @ 
+                Copyright © 
             </p>
         </footer>
 </body>
