constructed contact page, added a few css stylings for contact page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     I am currently managing an Italian Restraunt, overseeing the front of house, and running the Catering department. I have learned many skills here, most all of them related to customer service, multi tasking, and time management. I think a lot of the skills I have mastered from my time on the management team at my restraunt will carry over into my developing career.
             </p>
             <p>
-                    My family is most importnant to me. I have a beautiful wife, a 15 month old son, and a 12 year old daughter. We have a tuft tabby cat named Apollo, and an Australian Shepard/Border Collie mix. Her name is Lucy. I also enjoy playing piano and guitar, snowboarding, playing retro video games, and making pizzas.
+                    My family is most importnant to me. I have a beautiful wife, a 15 month old son, and a 12 year old daughter. We have a tuft tabby cat named Apollo, and an Australian Shepard/Border Collie mix. Her name is Lucy. I also enjoy playing piano and guitar, snowboarding, playing retro video games, going to Mariners games, and making pizzas.
             </p>
     </div>
         </div>
