updated some spelling errors in HTML, and tried adjusting the H2 margins to no sucess

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
 <!--The photo, and the about me section-->
    
         <div class="bodyInfo">
-            <img src="assets/images/portfolioAboutMe.png" alt="picture of me" width="125px" ALIGN="left">
+            <img src="assets/images/portfolioAboutMe.png" alt="picture of me" width="150px" ALIGN="left">
             <p>
                     My name is James Dobbe. I am a student at the University of Washington taking classes on web development. I am pursuing a new career in computer sciences, with a strong desire to succeed. I am learning more every class than I can believe, and continue to gain confidence and drive with each lesson.
             </p>
             <p>
-                    I am currently managing an Italian Restraunt, overseeing the front of house, and running the Catering department. I have learned many skills here, most all of them related to customer service, multi tasking, and time management. I think a lot of the skills I have mastered from my time on the management team at my restraunt will carry over into my developing career.
+                    I am currently managing an Italian Restaurant, overseeing the front of house, and running the Catering department. I have learned many skills here, most all of them related to customer service, multi tasking, and time management. I think a lot of the skills I have mastered from my time on the management team at my restraunt will carry over into my developing career.
             </p>
             <p>
-                    My family is most importnant to me. I have a beautiful wife, a 15 month old son, and a 12 year old daughter. We have a tuft tabby cat named Apollo, and an Australian Shepard/Border Collie mix. Her name is Lucy. I also enjoy playing piano and guitar, snowboarding, playing retro video games, going to Mariners games, and making pizzas.
+                    My family is most important to me. I have a beautiful wife, a 15 month old son, and a 12 year old daughter. We have a tabby cat named Apollo. We also have an Australian Shepard/Border Collie mix named Lucy. I also enjoy playing piano and guitar, snowboarding, playing retro video games, going to Mariners games, and making pizzas.
             </p>
     </div>
         </div>
