small repairs, more portfolio work.  Tyring to get label over picture, not working

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,13 +29,16 @@
 
                 <hr>
            
-                <span class="imageGrid">
+                <div class="imageGrid">
                     <img src="assets/images/eightBitPlatformer.png" alt="8bit">
+                    <div class="text-block">
+                        8 Bit Platformer
+                    </div>
                     <img src="assets/images/simon.png" alt="simonSays">
                     <img src="assets/images/8ball.jpeg" alt="8Ball">
                     <img src="assets/images/moonWeather.jpg" alt="Moon">
                     <img src="assets/images/jukebox.jpg" alt="musicplayer">
-                </span>
+                </div>
 
             </div>
             <footer>
