header work, almost perfect. some updates to descriptive paragraphs.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body background="assets/images/embossed-diamond.png">
     <header>
         <!--Trying to figure out to to line up the header, name on left, 3 others lined right-->
-        <strong class="name">James Dobbe</strong>
+        
+            <strong class="name">James Dobbe</strong>
 
         <div class="top">
-            
             <a href="index.html">About</a>|
             <a href="portfolio.html">Portfolio</a>|
             <a href="contact.html">Contact</a>
@@ -33,15 +33,15 @@
 <!--The photo, and the about me section-->
    
         <div class="bodyInfo">
-            <img src="assets/images/portfolioAboutMe.png" alt="picture of me" width="150px" ALIGN="left">
+            <img src="assets/images/portfolioAboutMe.png" alt="picture of me" width="200px" ALIGN="left">
             <p>
-                    My name is James Dobbe. I am a student at the University of Washington taking classes on web development. I am pursuing a new career in computer sciences, with a strong desire to succeed. I am learning more every class than I can believe, and continue to gain confidence and drive with each lesson.
+                    My name is James Dobbe. I am currently taking a program that teaches web development. I am pursuing a new career in computer sciences, with a strong desire to succeed. I am learning more every class than I can believe, and continue to gain confidence and drive with each lesson.
             </p>
             <p>
-                    I am currently managing an Italian Restaurant, overseeing the front of house, and running the Catering department. I have learned many skills here, most all of them related to customer service, multi tasking, and time management. I think a lot of the skills I have mastered from my time on the management team at my restraunt will carry over into my developing career.
+                    I am currently managing an Italian Restaurant, overseeing the front of house, and running the Catering department. I have learned many skills here, most all of them related to customer service, multi tasking, and time management. I think a lot of the skills I have mastered from my time on the management team at my restaurant will carry over into my developing career.
             </p>
             <p>
-                    My family is most important to me. I have a beautiful wife, a 15 month old son, and a 12 year old daughter. We have a tabby cat named Apollo. We also have an Australian Shepard/Border Collie mix named Lucy. I also enjoy playing piano and guitar, snowboarding, playing retro video games, going to Mariners games, and making pizzas.
+                    My family is most important to me. I have a beautiful wife, Becky, a 15 month old son, Cruz, and a 12 year old daughter, Morgan. We have a tabby cat, Apollo, and we have an Australian Shepard/Border Collie mix named Lucy. Some of my hobbies include playing piano and guitar, snowboarding, playing retro video games, going to Seattle Mariners games, and making pizzas.
             </p>
         </div>
     </div>
