--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 
                 <div class="mainInfoBox">
                     <h2>Contact</h2>
-                    <hr>
+                    <hr class="aboutMe">
                     <!--Working on this form right now-->
                     <form class="form">
                         Name <br>
