--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <body background="assets/images/embossed-diamond.png">
 
         <header>
-                <!--Trying to figure out to to line up the header, name on left, 3 others lined right-->
+                <!--finaly got my headers items to go where I wanted them to-->
             <strong class="name">James Dobbe</strong>
         
                 <div class="top">
@@ -25,21 +25,24 @@
         <hr>
             <div class="mainInfoBox">
 
-                <h2 class="h2">Portfolio</h2>
+                <h2>Portfolio</h2>
 
-                <hr>
-           
+                <hr class="aboutMe">
+           <!--Challenging trying to get labels to line up with the matching images here, lots of time struggling with this-->
                 <div class="imageGrid">
                     <div class="container">
-                    <img src="assets/images/eightBitPlatformer.png" alt="8bit">
-                        <div class="textcenter">
-                            <p>8 Bit Platformer</p>
-                        </div>
+                        <img src="assets/images/eightBitPlatformer.png" alt="8bit">
+                            <div class="imageLabel">
+                                8 Bit Platformer
+                            </div>
                     </div>
-                    <img src="assets/images/simon.png" alt="simonSays">
-                    <img src="assets/images/8ball.jpeg" alt="8Ball">
-                    <img src="assets/images/moonWeather.jpg" alt="Moon">
-                    <img src="assets/images/jukebox.jpg" alt="musicplayer">
+                        <img src="assets/images/8ball.jpeg" alt="8Ball">
+                            <!--<div class="imageLabel">
+                                Simon Says
+                            </div>-->
+                        <img src="assets/images/simon.png" alt="simonSays">
+                        <img src="assets/images/moonWeather.jpg" alt="Moon">
+                        <img src="assets/images/jukebox.jpg" alt="musicplayer">
                 </div>
 
             </div>
